2008-12-19  Jürg Billeter  <j@bitron.ch>

	* vala/valamemberaccess.vala:

	Fix crash when using property prototype as value

2008-12-19  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala:
	* vala/valascanner.vala:
	* vala/valatokentype.vala:

	Add `owned' type modifier and `(owned)' cast to replace `#',
	add `unowned' type modifier to complement `weak' for non-reference
	counted objects.

	`#' will be deprecated in Vala 0.5.5

2008-12-18  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodememberaccessmodule.vala:
	* gobject/valaccodemethodcallmodule.vala:

	Fix named constructor chaining, fixes bug 559303

2008-12-18  Jürg Billeter  <j@bitron.ch>

	* vapi/sqlite3.vapi:

	Fix sqlite3_callback binding

2008-12-18  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodemethodcallmodule.vala:

	Support error propagation from base constructor, fixes bug 564984

2008-12-18  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodemethodmodule.vala:

	Fix error propagation in creation methods, fixes part of 564944

2008-12-18  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodecontrolflowmodule.vala:

	Fix temporary variable handling in switch expressions,
	fixes bug 559278

2008-12-18  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:
	* gobject/valaccodemethodmodule.vala:

	Remove statements without effect, fixes bug 530601

2008-12-18  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:

	Fix member initializers for array fields, fixes bug 562600

2008-12-18  Jürg Billeter  <j@bitron.ch>

	* vala/valaassignment.vala:

	Report error when trying to connect signal to instance method
	from static context, fixes bug 502669

2008-12-17  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:

	Fix initialization of static array fields, fixes bug 472545

2008-12-17  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	GTree binding improvements, patch by Evan Nemerson,
	fixes bug 564823

2008-12-17  Jürg Billeter  <j@bitron.ch>
